Fix tables overflowing on Edit Payroll (#555)
- [ ] JIRA ticket referenced in title
- [ ] Title is clear and concise
- [ ] Description gives any relevant detail
- [ ] Tests are up to date
- [ ] Documentation is up to date

--- a/front_end/styles/styles.scss
+++ b/front_end/styles/styles.scss
@@ -368,3 +368,7 @@ th {
 .upload-list {
   font-size: 16px;
 }
+
+.scrollable {
+  overflow-x: auto;
+}
